deploy/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-must-gather-operator
  labels:
    openshift.io/cluster-monitoring: "true"
