deploy/00_openshift-must-gather-operator.Namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: openshift-must-gather-operator
  labels:
    openshift.io/cluster-monitoring: "true"
