deploy/99_must-gather-operator.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: must-gather-operator
  namespace: must-gather-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: must-gather-operator
  template:
    metadata:
      labels:
        name: must-gather-operator
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: node-role.kubernetes.io/infra
                operator: Exists
            weight: 1
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/infra
          operator: Exists
      serviceAccountName: must-gather-operator
      containers:
        - name: must-gather-operator
          # Replace this with the built image name
          image: quay.io/openshift/origin-must-gather-operator:latest
          command:
          - must-gather-operator
          imagePullPolicy: Always
          resources:
            limits:
              memory: "1Gi"
              cpu: "100m"
          volumeMounts:
            - mountPath: /tmp
              name: tmp
      volumes:
        - name: tmp
          emptyDir: {}
