deploy/99_operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: must-gather-operator
  namespace: openshift-must-gather-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: must-gather-operator
  template:
    metadata:
      labels:
        name: must-gather-operator
    spec:
      serviceAccountName: must-gather-operator
      containers:
        - name: must-gather-operator
          # Replace this with the built image name
          image: quay.io/app-sre/must-gather-operator:latest
          command:
          - must-gather-operator
          imagePullPolicy: Always
