deploy/10_must-gather.ValidatingAdmissionPolicyBinding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: must-gather-sa-authorization
spec:
  policyName: must-gather-sa-authorization
  validationActions:
  - Deny
