deploy/51_block-mg-restricted-namespaces.ValidatingAdmissionPolicyBinding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: block-mustgather-restricted-namespaces
spec:
  policyName: block-mustgather-restricted-namespaces
  validationActions: [Deny]
